# Naive-Sparse-Voxel-Octree-Raytracer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
libraries/glfw-3.3.2/: Makefile  cmake_uninstall.cmake
libraries/glfw-3.3.2/src/: Makefile
libraries/gllib/: gllib.c  gllib.h
resources/shaders/compute/: ref.glsl  svo_tracer.glsl
src/: main.c
src/client/: camera.c  camera.h  client.c  client.h  context.c  context.h  render.c  render.h
src/client/rendering/: render.c  render.h
src/common/: log.h  materials.h  pool_allocator.h  terrain.c  terrain.h
src/server/: server.c  server.h
